[gd_scene load_steps=10 format=2]

[ext_resource path="res://maxresdefault.jpg" type="Texture" id=1]
[ext_resource path="res://Blob2.tscn" type="PackedScene" id=2]
[ext_resource path="res://ShaderDrawerContainer.gd" type="Script" id=3]
[ext_resource path="res://ShaderDrawer.gd" type="Script" id=4]
[ext_resource path="res://BlobBody.shader" type="Shader" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://ttt.png" type="Texture" id=7]
[ext_resource path="res://Floor.tscn" type="PackedScene" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )

[node name="ViewportTest" type="Node2D"]

[node name="maxresdefault" type="Sprite" parent="."]
position = Vector2( 492.351, 290.338 )
scale = Vector2( 0.852056, 0.852056 )
texture = ExtResource( 1 )

[node name="Blob" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 0, 0 )

[node name="ShaderDrawerContainer" type="Node2D" parent="."]
position = Vector2( -1000, 0 )
script = ExtResource( 3 )

[node name="ViewportContainer" type="ViewportContainer" parent="ShaderDrawerContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="Viewport" parent="ShaderDrawerContainer/ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
hdr = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="ShaderDrawerContainer/ViewportContainer/Viewport"]
offset = Vector2( 512, 300 )
current = true
editor_draw_limits = true

[node name="ShaderDrawer" type="Node2D" parent="ShaderDrawerContainer/ViewportContainer/Viewport"]
script = ExtResource( 4 )

[node name="SpritesToDraw" type="Node2D" parent="ShaderDrawerContainer/ViewportContainer/Viewport"]

[node name="ShaderView" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 512, 300 )

[node name="ShaderViewSprite" type="Sprite" parent="ShaderView"]
material = SubResource( 1 )
texture = ExtResource( 6 )
flip_v = true

[node name="ttt" type="Sprite" parent="."]
position = Vector2( 529.38, 300 )
scale = Vector2( 1.04, 1 )
texture = ExtResource( 7 )

[node name="Floor" parent="." instance=ExtResource( 8 )]
position = Vector2( 340, 410 )

[node name="Floor9" parent="." instance=ExtResource( 8 )]
position = Vector2( 418.065, 171.678 )

[node name="Floor11" parent="." instance=ExtResource( 8 )]
position = Vector2( 518.063, 217.132 )
rotation = 0.897099

[node name="Floor10" parent="." instance=ExtResource( 8 )]
position = Vector2( 616.763, 257.391 )

[node name="Floor2" parent="." instance=ExtResource( 8 )]
position = Vector2( 550.285, 490.686 )

[node name="Floor4" parent="." instance=ExtResource( 8 )]
position = Vector2( 672.409, 490.719 )

[node name="Floor5" parent="." instance=ExtResource( 8 )]
position = Vector2( 790, 460 )
rotation = -0.724312

[node name="Floor6" parent="." instance=ExtResource( 8 )]
position = Vector2( 877.766, 383.093 )
rotation = -0.724312

[node name="Floor3" parent="." instance=ExtResource( 8 )]
position = Vector2( 441.928, 450 )
rotation = 0.724312

[node name="Floor7" parent="." instance=ExtResource( 8 )]
position = Vector2( 250, 380 )
rotation = 0.724312

[node name="Floor8" parent="." instance=ExtResource( 8 )]
position = Vector2( 150, 280 )
rotation = 0.724312

